[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/DeathScreen.gd" type="Script" id=1]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TopRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
color = Color( 0, 0, 0, 1 )

[node name="BottomRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="OfflineLabel" type="Label" parent="."]
margin_top = 540.0
margin_right = 1920.0
margin_bottom = 640.0
text = "Odisea"
align = 1
uppercase = true
